--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 venv/
+Timeseries/Octopus-Export-Electricitiy-Price-Predictor/agile-half-hour-actual-rates*
+Timeseries/Octopus-Export-Electricitiy-Price-Predictor/data.csv
